feat(REC): implementa integracion con vademecum microservice
